# SimpleGameEngine

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
include/: platform.h
include/platform/: library.h
include/utils/logger/: channel.h  color.h  format.h  logger.h
modules/directx/: CMakeLists.txt
modules/opengl/: CMakeLists.txt
modules/platform/: CMakeLists.txt
modules/platform/src/: library.cpp
modules/utils/: CMakeLists.txt
modules/utils/src/logger/: channel.cpp  color.cpp  format.cpp  logger.cpp
modules/vulkan/: CMakeLists.txt
